--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://raw.githubusercontent.com/scheibo/auth/master/favicon.png">
-    <title>Login</title>
+    <link rel="icon" href="{{.Favicon}}">
+    <title>{{.Title}}</title>
     <style>
       #container {
         position: fixed;
